# build-metadata

./: .envrc  .gitignore  Cargo.toml  Earthfile  README.md  conda-lock.yml  devshell.toml  environment.yml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: main.rs  repo.rs
